--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <html> 
 	<head>
 		<meta charset='utf-8'>
+		<link href="./css/bootstrap.min.css" rel="stylesheet">
+
 		<title>Form of Moroccan Ambassy</title>
+
+
 	</head>
 
 	<body>
 		<h1>Test 1</h1>
+
+		<form class="navbar-form navbar-left" role="search">
+  		<div class="form-group">
+    		<input type="text" class="form-control" placeholder="Search">
+  		</div>
+  		<button type="submit" class="btn btn-default">Submit</button>
+		</form>
+
+
+    	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    	<!-- Include all compiled plugins (below), or include individual files as needed -->
+    	<script src="./js/bootstrap.min.js"></script>
 	</body>
 </html>
